# gh-action_slack-notify

./: .envrc  .pre-commit-config.yaml  README.md  action.yml  event.json  pyproject.toml
.github/workflows/: its.yml  main.yml  pre-commit.yml  test.yaml
migration/: create_pr.py  list_repos.py  migration_report.csv  pr_report.csv  ready.py
src/: main.py
tests/: test_main.py
